2012-12-14
* support 'temporary' files in bruteforcescan.py. This is needed for XOR
'decryption'.
* add a preliminary implementation of XOR 'decryption'. There is a risk of
getting into an endless loop, so the scan is disabled by default.
* deduplicate postrunscans

2012-12-10
* add another variant of squashfs where only the identifier was changed. Code
is a bit inefficient and could use some cleanups.

2012-12-08
* add variant of generatelist.py that reads a directory full of SRPMs,
extracts the source code from the SRPMs, copies them to a directory and
generates a LIST file for the extracted sources.

2012-12-07
* split database into three databases (because of space contraints):
  - master database
  - licenses/copyrights database
  - ninkacomments database
In BAT 11.0 this will become the standard layout used by ranking.


2012-12-05
* sanity checks in batchextractprogramstrings.py to make sure there are
warnings if license/copyright scanning is enabled, but FOSSology does not
work (because PostgreSQL has not been started).
* remove unnecessary column from ninkacomments database, fix spello in name of
index

2012-11-30
* rewrite fossology scan for nomos to scan more files at once. Chunks of 10
seem to work best according to some very unscientific testing.

2012-11-29
* add script to verify format of LIST files as generated by generatelist.py.
This is useful if these files were manually edited for correctness.

2012-11-28
* extra sanity check for existence of database table in bat/ranking.py
* update database creation to work with FOSSology 2.1.0.
* extract copyrights (currently only e-mail addresses and URLs) using the
copyright agent from FOSSology.
* store other copyright statements. There is quite a bit of bogus data in
there, so we probably need an extra step to clean up.

2012-11-26
* remove non-functioning code from bat/images.py and replace it with
configuration options
* remove unused code from bat/bruteforcescan.py