@@ -1,3 +1,8 @@
+2012-12-15
+* bat/fwunpack.py: let unpackFile handle lengths properly, only when offset ==
+0. Only used in ZIP unpacking at the moment.
+* fix ZIP unpacking in case there is a single ZIP file, with trailing data.
+
 2012-12-14
 * support 'temporary' files in bruteforcescan.py. This is needed for XOR
 'decryption'.
